Added ui microservice

--- a/conf/ci.yaml
+++ b/conf/ci.yaml
@@ -38,3 +38,12 @@ remotes:
     name: api
     namespace: '{{ cluster.metadata.namespaces.user }}'
 
+
+  - containers:
+    - dockerBuild:
+        contextPath: microservices/ui
+        dockerfilePath: microservices/ui/Dockerfile
+      name: ui
+    name: ui
+    namespace: '{{ cluster.metadata.namespaces.user }}'
+
